[gd_scene load_steps=46 format=2]

[ext_resource path="res://Imágenes/principal/Jugador2D.gd" type="Script" id=1]
[ext_resource path="res://principal/final.png" type="Texture" id=2]
[ext_resource path="res://hitbox y hurtox/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Imágenes/principal/HitboxESpada.gd" type="Script" id=4]
[ext_resource path="res://hitbox y hurtox/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://sonidos/golpe.wav" type="AudioStream" id=6]
[ext_resource path="res://sonidos/nocbak.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.30861
height = 11.3828

[sub_resource type="Animation" id=2]
resource_name = "Ataque D"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Ataque_final"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitboxpoci:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitboxpoci/HitboxEspada/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.396531,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "Ataque Iz"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Ataque_final"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitboxpoci:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitboxpoci/HitboxEspada/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.1, 0.101 )
}

[sub_resource type="Animation" id=4]
resource_name = "Ataque f"
length = 1.2
step = 0.002
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Ataque_final"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitboxpoci:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitboxpoci/HitboxEspada/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.296, 0.91 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.3 )
}

[sub_resource type="Animation" id=5]
length = 0.75
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 18 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Ataque_final"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=9]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 43, 44, 45 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=12]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 50 ]
}

[sub_resource type="Animation" id=13]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Ataque Iz"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Ataque D"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Ataque f"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "C frente"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "C izquierda"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "C derecha"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "C frente"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "C espalda"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Q izquierda"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Q frenD"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Q fren"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "Q espalda"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachine" id=34]
states/Ataque/node = SubResource( 19 )
states/Ataque/position = Vector2( 252, 176 )
states/Caminar/node = SubResource( 24 )
states/Caminar/position = Vector2( 439, 103 )
states/Estatico/node = SubResource( 29 )
states/Estatico/position = Vector2( 252, 103 )
transitions = [ "Estatico", "Caminar", SubResource( 30 ), "Caminar", "Estatico", SubResource( 31 ), "Estatico", "Ataque", SubResource( 32 ), "Ataque", "Estatico", SubResource( 33 ) ]
start_node = "Estatico"
graph_offset = Vector2( 0, 28.466 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=35]

[sub_resource type="CapsuleShape2D" id=36]
radius = 5.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=37]
radius = 6.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=38]
radius = 4.0
height = 2.0

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 183, 68 )
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -17.941, 0.068 )
scale = Vector2( 0.31, 0.269 )
texture = ExtResource( 2 )
vframes = 54
frame = 42

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -20, 4 )
rotation = 1.5708
scale = Vector2( 0.6, 0.6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Ataque D" = SubResource( 2 )
"anims/Ataque Iz" = SubResource( 3 )
"anims/Ataque f" = SubResource( 4 )
"anims/C derecha" = SubResource( 5 )
"anims/C espalda" = SubResource( 6 )
"anims/C frente" = SubResource( 7 )
"anims/C izquierda" = SubResource( 8 )
"anims/Escudo De" = SubResource( 9 )
"anims/Escudo Iz" = SubResource( 10 )
"anims/Q espalda" = SubResource( 11 )
"anims/Q fren" = SubResource( 12 )
"anims/Q frenD" = SubResource( 13 )
"anims/Q izquierda" = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 34 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 35 )
parameters/Ataque/blend_position = Vector2( -0.00618047, 0.0284483 )
parameters/Caminar/blend_position = Vector2( -0.0171278, -0.55 )
parameters/Estatico/blend_position = Vector2( 0.0434783, 0.784483 )

[node name="Hitboxpoci" type="Position2D" parent="."]
position = Vector2( -19, 0 )
rotation = 4.71239
__meta__ = {
"_gizmo_extents_": 7.0
}

[node name="HitboxEspada" parent="Hitboxpoci" instance=ExtResource( 3 )]
position = Vector2( 19, 0 )
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="Hitboxpoci/HitboxEspada" index="0"]
position = Vector2( -11, 0 )
shape = SubResource( 36 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -19, 0 )
shape = SubResource( 37 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="nexlevel" parent="." instance=ExtResource( 5 )]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="nexlevel" index="0"]
position = Vector2( -19, 3 )
shape = SubResource( 38 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="nexlevel" to="." method="_on_nexlevel_area_entered"]

[editable path="Hitboxpoci/HitboxEspada"]

[editable path="Hurtbox"]

[editable path="nexlevel"]
